updated email validator in script.js file

--- a/public_html/documentation/package.json
+++ b/public_html/documentation/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "$name$",
-  "version": "$version$",
+  "name": "documentation",
+  "version": "1.0.0",
   "dependencies": {
-    $END$
-  }
+  },
+  "type": "module"
 }
